--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,6 +13,10 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
 
     steps:
     - name: Checkout repository
@@ -26,6 +30,13 @@ jobs:
     # the head of the pull request instead of the merge commit.
     - run: git checkout HEAD^2
       if: ${{ github.event_name == 'pull_request' }}
+      
+    - name: Nodejs setup
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matric.node-version }}
+        
+    - run: npm install
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
