--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Nodejs setup
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matric.node-version }}
+        node-version: ${{ matrix.node-version }}
         
     - run: npm install
 
